Still swimming... uh, learning

--- a/sandbox/test.ipynb
+++ b/sandbox/test.ipynb
@@ -681,7 +681,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3.10.8 ('_sextractor-venv': venv)",
+      "display_name": "Python 3.10.8 64-bit (microsoft store)",
       "language": "python",
       "name": "python3"
     },
@@ -699,7 +699,7 @@
     },
     "vscode": {
       "interpreter": {
-        "hash": "5961afc2e15f47e26c74dff87f7d191f3c456683f36d45a9ebbc8b8b259f19b5"
+        "hash": "e0d398e7c3cc3d2b8386dfea47f5eae3378d5d39db7e2c8ef87e93246db0bfd2"
       }
     }
   },
