AI world definitely need better tutorials...

--- a/1.image_generation.ipynb
+++ b/1.image_generation.ipynb
@@ -157,6 +157,27 @@
     "shot = Shot(sky, pupil)\n",
     "shot.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# =========< ! >==========\n",
+    "#    Be careful! [...]\n",
+    "# ---------< ! >----------\n",
+    "\n",
+    "def foo(bar) -> str:\n",
+    "\n",
+    "    if bar >= 1:\n",
+    "        return \"a\"\n",
+    "    \n",
+    "    if bar != 0:\n",
+    "        return \"b\"\n",
+    "\n",
+    "    return \"c\""
+   ]
   }
  ],
  "metadata": {
